# spleeter

./: .flake8  .gitignore  CHANGELOG.md  GUI.py  LICENSE  MANIFEST.in  Makefile  README.md  commands notes  demo.py  install_dependencies.bat  ln_tldr_spleeter.sh  paper.bib  paper.md  pyproject.toml  requirements.txt  rundocker.sh  setup.py  spleeter.ipynb  tldr_spleeter.md
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  discussion.md  feature.md
.github/workflows/: conda.yml  docker.yml  pypi.yml  pytest.yml  test.yml
conda/: spleeter-cpu.yaml  spleeter-gpu.yaml
conda/cpu/: bld.bat
conda/spleeter/: build.sh  conda_build_config.yaml  meta.yaml
conda/spleeter-gpu/: meta.yaml
configs/: musdb_config.json  musdb_train.csv  musdb_validation.csv
configs/2stems/: base_config.json
configs/4stems/: base_config.json
configs/5stems/: base_config.json
docker/: conda-entrypoint.sh  conda-gpu.dockerfile  conda.dockerfile  cuda-10-0.dockerfile  cuda-10-1.dockerfile  cuda-9.2.dockerfile  embedded-model.dockerfile  gpu_shell.Dockerfile  python-3.6-gpu.dockerfile  python-3.6.dockerfile  python-3.7-gpu.dockerfile  python-3.7.dockerfile  spleeter-conda.dockerfile  spleeter-model.dockerfile  spleeter.dockerfile  with_the_same_user.sh
docker/cpu/: conda-2stems.dockerfile  conda-4-stems.dockerfile  conda-4stems.dockerfile  conda-5stems.dockerfile  conda.dockerfile  cpu.dockerfile  python-3.6-2stems.dockerfile  python-3.6-4stems.dockerfile  python-3.6-5stems.dockerfile  python-3.6.dockerfile  python-3.7-2stems.dockerfile  python-3.7-4stems.dockerfile  python-3.7-5stems.dockerfile  python-3.7.dockerfile
docker/gpu/: conda-gpu-2-stems.dockerfile  conda-gpu-4-stems.dockerfile  conda-gpu-5-stems.dockerfile  conda-gpu.dockerfile  gpu.dockerfile  install_miniconda.sh
spleeter/: __init__.py  __main__.py  dataset.py  options.py  separator.py  types.py
spleeter/audio/: __init__.py  adapter.py  convertor.py  ffmpeg.py  spectrogram.py
spleeter/commands/: __init__.py  evaluate.py  separate.py  train.py
spleeter/model/: __init__.py
spleeter/model/functions/: __init__.py  blstm.py  unet.py
spleeter/model/provider/: __init__.py  github.py
spleeter/resources/: 2stems-16kHz.json  4stems-16kHz.json  4stems.json  5stems-16kHz.json  __init__.py  musdb.json
spleeter/utils/: __init__.py  configuration.py  estimator.py  logging.py  tensor.py
spleeter/utils/audio/: __init__.py  adapter.py  ffmpeg.py
tests/: __init__.py  test_command.py  test_eval.py  test_ffmpeg_adapter.py  test_github_model_provider.py  test_pypi_sdist.sh  test_separator.py  test_train.py
